# sse-fastapi-app

./: .env.example  LICENSE  README.md  pyproject.toml
sse-fastapi-app/: main.py  utils.py
